# paro

./: Cargo.toml  README.md  TODO.md  install.sh
.github/workflows/: pr-ci.yaml  release.yaml
src/: actions.rs  clap_parser.rs  config_parser.rs  file_actions.rs  files.rs  main.rs  nix_helper.rs  settings.rs  terminal.rs  types.rs
src/parsers/: clap.rs  config.rs  mod.rs
tests/: settings.toml
