# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "paro"
version = "0.0.0"
edition = "2021"

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
config = "0.13.2"
nix = { version = "0.24.2", features = ["hostname", "user"] }
serde = { version = "1.0.142", features = ["derive"]}

# See more about this optimizations at https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = 'abort'
