# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "paro"
version = "0.0.0"
authors = ["Rafael Delboni <rafadelboni@gmail.com>"]
description = """
Tool for managing dotfiles directories; Heavily based on rcm.  
paro has first class support on macOS and Linux
"""
documentation = "https://github.com/rafaeldelboni/paro"
homepage = "https://github.com/rafaeldelboni/paro"
repository = "https://github.com/rafaeldelboni/paro"
keywords = ["dotfiles", "management", "symlink", "rcm", "stow"]
categories = ["command-line-utilities", "dotfile-management"]
license = "Unlicense"
edition = "2021"

[[bin]]
bench = false
path = "src/main.rs"
name = "paro"

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
config = "0.13.2"
nix = { version = "0.24.2", features = ["hostname", "user"] }
regex = "1.6.0"
serde = { version = "1.0.142", features = ["derive"]}
termion = "1.5.6"
walkdir = "2.3.2"

# See more about this optimizations at https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = 'abort'
